# yandex-weather-parser-bot

./: .gitignore  Dockerfile  README.md  config.yaml  main.py  pyproject.toml  ТЗ (Кейс).docx
app/: app_container.py  exceptions.py  schemes.py  settings.py
app/adapters/: base.py  db_adapter.py  telegram.py  yandex.py
app/db/: weather_db.db
app/services/: dialog_flow.py  main_telegram_service.py
app/test/: send_excel.py
app/utils/: utils.py
